--- a/configs/env.properties
+++ b/configs/env.properties
@@ -1,13 +1,13 @@
 envatoPurchaseCode=put-your-envato-purchase-code-here
-appName=FluxStore
+appName=تمريض العياده المنزلية
 iosBundleId=com.inspireui.mstore.flutter
 iosBundleIdOneSignal=com.inspireui.mstore.flutter.onesignal
 iosAppGroups=group.com.inspireui.mstore.flutter.onesignal
 iosMerchantId=merchant.com.inspireui.mstore.flutter
-androidPackageName=com.inspireui.fluxstore
+androidPackageName=com.al3yadadel.com
 websiteUrl=https://inspireui.com
 websiteDomain=inspireui.com
-customScheme=fluxstore
+customScheme=تمريض العياده المنزلية
 iosApsEnvironment=development
 firebaseDynamicUrl=fluxstoreinspireui.page.link
 googleReversedClientId=com.googleusercontent.apps.412823237422-pf5dr3f75n6r201u24ocioin54u3cseq
