--- a/lib/frameworks/shopify/config_example/config_ar.json
+++ b/lib/frameworks/shopify/config_example/config_ar.json
@@ -223,7 +223,7 @@
   "OnBoarding": {
     "data": [
       {
-        "title": "مرحبًا بك في FluxStore",
+        "title": "مرحبًا بك في تمريض العياده المنزلية",
         "image": "assets/images/fogg-delivery-1.png",
         "desc": "Fluxstore is on the way to serve you. ",
         "background": "#FFF3F2"
