--- a/configs/env.properties
+++ b/configs/env.properties
@@ -1,5 +1,5 @@
 envatoPurchaseCode=put-your-envato-purchase-code-here
-appName=تمريض العياده المنزلية
+appName=Home Clinic Delivery
 iosBundleId=com.inspireui.mstore.flutter
 iosBundleIdOneSignal=com.inspireui.mstore.flutter.onesignal
 iosAppGroups=group.com.inspireui.mstore.flutter.onesignal
@@ -7,12 +7,12 @@ iosMerchantId=merchant.com.inspireui.mstore.flutter
 androidPackageName=com.al3yadadel.com
 websiteUrl=https://inspireui.com
 websiteDomain=inspireui.com
-customScheme=تمريض العياده المنزلية
+customScheme=Home Clinic Delivery
 iosApsEnvironment=development
 firebaseDynamicUrl=fluxstoreinspireui.page.link
 googleReversedClientId=com.googleusercontent.apps.412823237422-pf5dr3f75n6r201u24ocioin54u3cseq
-googleApiKeyAndroid=AIzaSyDSNYVC-8DU9BTcyqkeN9c5pgVhwOBAvGg
-googleApiKeyIos=AIzaSyDnBpxFOfeG6P06nK97hMg01kEgX48JhLE
+googleApiKeyAndroid=AIzaSyAYx3NYuaW2KfRt28bdfC-g37i9B-6rVgA
+googleApiKeyIos=AIzaSyAYx3NYuaW2KfRt28bdfC-g37i9B-6rVgA
 adMobAppIdAndroid=ca-app-pub-7432665165146018~2664444130
 adMobAppIdIos=ca-app-pub-7432665165146018~2664444130
 facebookAppId=430258564493822
