--- a/configs/env.properties
+++ b/configs/env.properties
@@ -1,13 +1,13 @@
 envatoPurchaseCode=put-your-envato-purchase-code-here
-appName=Home Clinic Delivery
+appName=Home Clinic Nursing
 iosBundleId=com.inspireui.mstore.flutter
 iosBundleIdOneSignal=com.inspireui.mstore.flutter.onesignal
 iosAppGroups=group.com.inspireui.mstore.flutter.onesignal
 iosMerchantId=merchant.com.inspireui.mstore.flutter
 androidPackageName=com.al3yadadel.com
-websiteUrl=https://inspireui.com
-websiteDomain=inspireui.com
-customScheme=Home Clinic Delivery
+websiteUrl=https://aleiada2022.com
+websiteDomain=aleiada2022.com/
+customScheme=Home Clinic Nursing
 iosApsEnvironment=development
 firebaseDynamicUrl=fluxstoreinspireui.page.link
 googleReversedClientId=com.googleusercontent.apps.412823237422-pf5dr3f75n6r201u24ocioin54u3cseq
