--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,11 +86,8 @@ dependencies:
   fwfh_text_style: 2.22.8+1
 
   # VIDEO
-  youtube_player_iframe:
-    git:
-      url: https://github.com/inspireui/youtube_player_flutter.git
-      path: packages/youtube_player_iframe
-      ref: 14b2055ab38cb7b66297611908ceee1f4f53386f
+  video_player: ^2.7.0
+  youtube_player_iframe: 4.0.4
 
   # MAP
   google_maps_flutter: 2.2.1
